Release History

v1.0.0903.15xx
- HtmlDistiller: added auto-link parsing (URLs in literals can be optionally converted to hyperlinks)
- HtmlDistiller: auto-link capability leverages further customization through FilterUrl method
- HtmlDistiller: added ability to change the truncation indicator (defaults to ellipsis)
- now driving the default for compacted scripts/css/merge off the compilation debug="[bool]" app setting (rather than always compacted)
  i.e. no flag switches based upon config, "?debug" is always debug, ?[sha1-hash] is always permanently cached, any other value is always compacted

v1.0.0903.1309
- fixed complex attribute typo in JBST builder script
- enables creating events with closures during databinding

v1.0.0903.1209
- added ability to render .NET Regex as ECMAScript RegExp literals in script data blocks
- created an EcmaScriptWriter which can also serialize native non-JSON ECMAScript data types (e.g. DateTime, RegExp)

v1.0.0903.0714
- add new intrinsic member to JBSTs: this.count
  where this.index is the current data index, this.count is the number of data items being bound
- reduced extraneous whitespace nodes around templates
- added unwrapping of documentFragment results when only contain single element
- improved HtmlDistiller's ability to understand difference between tags and unescaped less-than literals
- updated StarterKit documentation

v1.0.0903.0509
- improved type coercion between sequences of strongly types objects
- refactored type-coercion code out of JsonReader into utility class

v1.0.0903.0408
- added ability to specify inline anonymous templates in JBST using declarative <jbst:control></jbst:control> syntax
- cleaned up calling template parts in the context of "this"

v1.0.0903.0309
- added unparsed block syntax <%# ... %> for inserting data that contains markup
- fixed bug where globalization keys weren't being correctly picked up in DOM attributes

v1.0.0903.0117